<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <com.adamin90.adamlee.mygame.GameSceneView
        android:id="@+id/game_scene_view"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:keepScreenOn="true" />

    <com.adamin90.adamlee.mygame.GameOptionsView
        android:id="@+id/game_options_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom">
        <ImageView
            android:id="@+id/game_options_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/options_close_spacing"
            android:contentDescription="@string/close_menu"
            android:src="@drawable/ic_close" />
        <FrameLayout
            android:id="@+id/game_options_sound_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/game_options_close"
            android:layout_centerHorizontal="true"
            android:background="@drawable/options_item_bg">

            <ImageView
                android:id="@+id/game_options_sound_outer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/toggle_sound"
                android:src="@drawable/ic_sound_outer" />

            <ImageView
                android:id="@+id/game_options_sound_middle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/toggle_sound"
                android:src="@drawable/ic_sound_middle" />

            <ImageView
                android:id="@+id/game_options_sound_inner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/toggle_sound"
                android:src="@drawable/ic_sound_inner" />
        </FrameLayout>

        <ImageView
            android:id="@+id/game_options_previous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/game_options_close"
            android:layout_marginRight="@dimen/options_item_spacing"
            android:layout_toLeftOf="@id/game_options_sound_container"
            android:background="@drawable/options_item_bg"
            android:contentDescription="@string/previous_level"
            android:src="@drawable/ic_previous" />

        <ImageView
            android:id="@+id/game_options_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/game_options_close"
            android:layout_marginLeft="@dimen/options_item_spacing"
            android:layout_toRightOf="@id/game_options_sound_container"
            android:background="@drawable/options_item_bg"
            android:contentDescription="@string/next_level"
            android:src="@drawable/ic_next" />

        <View
            android:id="@+id/game_options_open"
            android:layout_width="@dimen/options_item_size"
            android:layout_height="@dimen/options_item_size"
            android:contentDescription="ViewViewView"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />

        <ImageView
            android:id="@+id/game_options_screenshot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/share_screenshot"
            android:paddingBottom="12.0dip"
            android:src="@drawable/ic_screenshot"
            android:visibility="invisible" />


    </com.adamin90.adamlee.mygame.GameOptionsView>

    <LinearLayout
        android:id="@+id/layout_adview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="50dp"
        android:gravity="top"
        android:orientation="vertical" >
    </LinearLayout>
</FrameLayout>